--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,80 +1,132 @@
 ---
-title: "Quickstart"
-description: "Start building awesome documentation in minutes"
+title: "Quick Start"
+description: "Create and deploy your first AI agent in 2 minutes"
 ---
 
-## Get started in three steps
+## Prerequisites
 
-Get your documentation site running locally and make your first customization.
+You need a Chatoura account. [Sign up here](https://app.chatoura.com/signup) if you don't have one.
 
-### Step 1: Set up your local environment
+## Step 1: Start Agent Creation
+
+1. Go to your [Dashboard](https://app.chatoura.com/dashboard)
+2. Click **New AI Agent**
+
+You'll see the agent creation wizard with two options:
+- **Enter your website URL** - Recommended for fastest setup
+- **Set up manually** - If you don't have a website or prefer to add content manually
+
+## Step 2: Add Knowledge Sources
+
+<Tabs>
+  <Tab title="Website URL (Recommended)">
+    The fastest way to create an agent:
+
+    1. Enter your website URL (e.g., `yourwebsite.com`)
+    2. Click **Continue**
+    3. Chatoura automatically extracts:
+       - Your logo and branding
+       - Website pages and content
+       - Business information
+
+    <Note>
+    The extraction typically takes 10-30 seconds depending on your website size.
+    </Note>
+  </Tab>
+  <Tab title="Manual Setup">
+    If you prefer to set up manually:
+
+    1. Click **Set up manually by uploading documents or typing the business information**
+    2. Add your knowledge sources using the accordion panels:
+       - **Website** - Enter a URL to fetch pages
+       - **Files** - Upload documents (PDF, DOC, DOCX, TXT, MD)
+       - **Business info** - Describe your business, products, and services
+  </Tab>
+</Tabs>
+
+## Step 3: Review and Customize
+
+After extraction (or choosing manual setup), you'll see the review screen with three knowledge source sections:
 
 <AccordionGroup>
-  <Accordion icon="copy" title="Clone your docs locally">
-    During the onboarding process, you created a GitHub repository with your docs content if you didn't already have one. You can find a link to this repository in your [dashboard](https://dashboard.mintlify.com).
-    
-    To clone the repository locally so that you can make and preview changes to your docs, follow the [Cloning a repository](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository) guide in the GitHub docs.
+  <Accordion title="Website">
+    Review the extracted pages from your website. You can:
+    - Select or deselect individual pages
+    - See a preview of each page's content
+    - Add a different website URL if needed
   </Accordion>
-  <Accordion icon="rectangle-terminal" title="Start the preview server">
-    1. Install the Mintlify CLI: `npm i -g mint`
-    2. Navigate to your docs directory and run: `mint dev`
-    3. Open `http://localhost:3000` to see your docs live!
-    
-    <Tip>Your preview updates automatically as you edit files.</Tip>
+  <Accordion title="Files">
+    Upload additional documents to train your agent:
+    - PDF files (.pdf)
+    - Word documents (.doc, .docx)
+    - Text files (.txt)
+    - Markdown files (.md)
+    - Maximum 5 files, 10MB each
+  </Accordion>
+  <Accordion title="Business info">
+    Add or edit your business details:
+    - **Business name** - Your company or brand name
+    - **What does your business do?** - Describe your products and services
+    - **What do customers usually ask about?** - Common questions, pricing, policies, hours, etc.
   </Accordion>
 </AccordionGroup>
 
-### Step 2: Deploy your changes
 
-<AccordionGroup>
-  <Accordion icon="github" title="Install our GitHub app">
-    Install the Mintlify GitHub app from your [dashboard](https://dashboard.mintlify.com/settings/organization/github-app).
-    
-    Our GitHub app automatically deploys your changes to your docs site, so you don't need to manage deployments yourself.
-</Accordion>
-<Accordion icon="palette" title="Update your site name and colors">
-    For a first change, let's update the name and colors of your docs site.
+## Step 4: Create Your Agent
 
-    1. Open `docs.json` in your editor.
-    2. Change the `"name"` field to your project name.
-    3. Update the `"colors"` to match your brand.
-    4. Save and see your changes instantly at `http://localhost:3000`.
+1. Review your knowledge sources in the preview panel
+2. Click **Create AI Agent**
+3. You'll be redirected to your new agent's dashboard
 
-    <Tip>Try changing the primary color to see an immediate difference!</Tip>
-  </Accordion>
-</AccordionGroup>
+## Step 5: Test in Playground
 
-### Step 3: Go live
+1. Go to the **Playground** tab
+2. Type a question about your content
+3. Review the response
+4. Adjust settings if needed
 
-<Accordion icon="rocket" title="Publish your docs">
-  1. Commit and push your changes.
-  2. Your docs will update and be live in moments!
-</Accordion>
+## Step 6: Deploy
 
-## Next steps
+<Tabs>
+  <Tab title="Web Widget">
+    1. Go to the **Integrations** tab in your agent's sidebar
+    2. Find **Web Integration** and enable it
+    3. Copy the embed code
+    4. Paste into your website's HTML before `</body>`
 
-Now that you have your docs running, explore these key features:
+    ```html
+    <script src="https://agent.chatoura.com/widget.js"
+            data-agent-id="your-agent-id">
+    </script>
+    ```
+  </Tab>
+  <Tab title="Facebook">
+    1. Go to the **Integrations** tab in your agent's sidebar
+    2. Find **Facebook** under Messaging Channels
+    3. Click **Connect** and authorize your Facebook Page
+    4. Your agent is now live on Messenger
+  </Tab>
+  <Tab title="Instagram">
+    1. Go to the **Integrations** tab in your agent's sidebar
+    2. Find **Instagram** under Messaging Channels
+    3. Click **Connect** and authorize your Instagram Business account
+    4. Your agent is now live on Instagram DMs
+  </Tab>
+</Tabs>
+
+## Next Steps
 
 <CardGroup cols={2}>
-
-<Card title="Write Content" icon="pen-to-square" href="/essentials/markdown">
-  Learn MDX syntax and start writing your documentation.
-</Card>
-
-<Card title="Customize style" icon="palette" href="/essentials/settings">
-  Make your docs match your brand perfectly.
-</Card>
-
-<Card title="Add code examples" icon="square-code" href="/essentials/code">
-  Include syntax-highlighted code blocks.
-</Card>
-
-<Card title="API documentation" icon="code" href="/api-reference/introduction">
-  Auto-generate API docs from OpenAPI specs.
-</Card>
-
+  <Card title="Configure Settings" icon="sliders" href="/agents/settings">
+    Customize language, tone, and persona
+  </Card>
+  <Card title="Add More Sources" icon="database" href="/knowledge/overview">
+    Expand your agent's knowledge
+  </Card>
+  <Card title="Set Up Leads" icon="user-plus" href="/features/leads">
+    Capture visitor information
+  </Card>
+  <Card title="Configure Escalations" icon="arrow-up" href="/features/escalations">
+    Route to human support when needed
+  </Card>
 </CardGroup>
-
-<Note>
-  **Need help?** See our [full documentation](https://mintlify.com/docs) or join our [community](https://mintlify.com/community).
-</Note>
