Update billing documentation to reflect changes in credit plans and usage. Revised monthly credit allowances, added details on contacting sales for additional credits, and improved clarity on plan features and upgrade/downgrade processes.

--- a/billing/credits.mdx
+++ b/billing/credits.mdx
@@ -20,90 +20,52 @@ Credits are the currency for AI responses in Chatoura. Each credit equals one AI
 | AI responds to question | 1 |
 | Customer sends follow-up | 0 |
 | AI responds to follow-up | 1 |
-| You manually respond | 0 |
 | System sends greeting | 0 |
 
 ## Checking Your Balance
 
-View your credit balance:
-
-1. Go to **Settings** > **Billing**
-2. See current credit balance
-3. View usage history
-
-Or check the credit indicator in the dashboard header.
+View your credit balance in the dashboard header, which shows your current credits and usage.
 
 ## Monthly Credits
 
-Each plan includes monthly credits:
+Each plan includes a monthly credit allowance:
 
 | Plan | Monthly Credits |
 |------|-----------------|
-| Starter | 1,000 |
-| Pro | 10,000 |
-| Business | Custom |
+| Free | 50 |
+| Starter | 1,500 |
+| Pro | 6,000 |
+| Enterprise | Custom |
 
 ### Refresh Cycle
 
 - Credits refresh on your billing date
 - Unused credits don't roll over
-- Balance resets to plan allocation
+- Balance resets to your plan's allocation
 
-## Adding Credits
+## Need More Credits?
 
-Need more credits before refresh?
+If you need additional credits beyond your plan allocation:
 
-### Credit Packs
-
-Purchase additional credits:
-
-1. Go to **Settings** > **Billing**
-2. Click **Add Credits**
-3. Select credit pack
-4. Complete payment
-
-| Pack | Credits | Best For |
-|------|---------|----------|
-| Small | 500 | Occasional spikes |
-| Medium | 2,000 | Regular top-ups |
-| Large | 5,000 | High volume |
+1. Contact the sales team
+2. Discuss your usage requirements
+3. Get a custom credit package
 
 <Note>
-Purchased credits are added to your current balance and expire with your billing cycle.
+Contact sales at [cal.com/islamibrahim/chatoura](https://cal.com/islamibrahim/chatoura) to discuss additional credits or custom plans.
 </Note>
-
-## Credit Alerts
-
-Set up alerts to avoid running out:
-
-1. Go to **Settings** > **Billing**
-2. Enable **Low Credit Alerts**
-3. Set threshold (e.g., 100 credits)
-4. Receive email when balance is low
 
 ## When Credits Run Out
 
 If your credit balance reaches zero:
 
 1. AI stops responding to new messages
-2. Active conversations are paused
-3. Messages queue until credits are added
-4. You can still manually respond
+2. Messages queue until credits are available
+3. Credits refresh on your next billing date
 
 <Warning>
-Customers may experience delays when credits are depleted. Set up alerts to avoid this.
+Monitor your credit usage to avoid service interruption. Upgrade your plan or contact sales if you consistently run low.
 </Warning>
-
-## Credit History
-
-View how credits were used:
-
-1. Go to **Settings** > **Billing**
-2. Click **Credit History**
-3. See usage by:
-   - Date
-   - Agent
-   - Channel
 
 ## Estimating Usage
 
@@ -112,7 +74,7 @@ Calculate expected credit usage:
 ```
 Monthly Credits Needed =
   Daily Conversations ×
-  Avg Messages per Conversation ×
+  Avg AI Responses per Conversation ×
   30 days
 ```
 
@@ -132,14 +94,13 @@ Monthly Credits Needed =
 
 ### Monitor Usage
 
-- Check credit history regularly
+- Check your credit balance regularly
 - Identify high-usage agents
-- Track usage by channel
+- Track usage patterns
 
 ### Scale Appropriately
 
 - Upgrade plan if consistently running out
-- Purchase credit packs for busy periods
 - Contact sales for custom volumes
 
 ## FAQ
@@ -148,13 +109,10 @@ Monthly Credits Needed =
   <Accordion title="Do test messages use credits?">
     Messages in the Playground don't use credits. Only live customer conversations consume credits.
   </Accordion>
-  <Accordion title="Are there bulk discounts?">
-    Business plans include custom pricing. Contact sales for volume discounts.
+  <Accordion title="Can I buy credits without upgrading?">
+    Contact the sales team to discuss additional credit packages for your current plan.
   </Accordion>
   <Accordion title="What if I dispute credit usage?">
-    Review your credit history for details. Contact support if you see unexpected usage.
-  </Accordion>
-  <Accordion title="Can I get credits refunded?">
-    Unused purchased credits can be credited to your account. Contact support for assistance.
+    Contact support if you see unexpected usage on your account.
   </Accordion>
 </AccordionGroup>
