--- a/billing/plans.mdx
+++ b/billing/plans.mdx
@@ -7,14 +7,13 @@ Chatoura offers flexible plans to match your usage. All plans include core featu
 
 ## Plan Comparison
 
-| Feature | Starter | Pro | Business |
-|---------|---------|-----|----------|
-| AI Agents | 1 | 5 | Unlimited |
-| Monthly credits | 1,000 | 10,000 | Custom |
-| Knowledge characters | 100,000 | 1,000,000 | Custom |
-| Team members | 1 | 5 | Unlimited |
-| Integrations | Web only | All | All + Priority |
-| Support | Email | Priority | Dedicated |
+| Feature | Free | Starter | Pro | Enterprise |
+|---------|------|---------|-----|------------|
+| Price | $0/month | $30/month | $110/month | Custom |
+| Monthly credits | 50 | 1,500 | 6,000 | Custom |
+| AI Agents | 1 | 1 | 3 | Custom |
+| Knowledge documents | 1 | 3 | 10 | Custom |
+| Team members | 1 | 1 | 4 | Unlimited |
 
 ## Credit System
 
@@ -23,64 +22,71 @@ All plans use a credit-based system:
 - **1 credit = 1 AI response**
 - Credits refresh monthly
 - Unused credits don't roll over
-- Add more credits anytime
+- Contact sales for additional credits
 
 <Note>
 See [Credits](/billing/credits) for details on how credits work.
 </Note>
 
-## Starter Plan
+## Plan Tiers
 
-Best for individuals and small projects:
+### Free Plan
 
-- 1 AI agent
-- 1,000 credits/month
-- 100,000 character knowledge base
-- Web widget integration
-- Email support
+Get started with AI chatbots:
 
-## Pro Plan
+- **50 credits** per month
+- 1 chatbot
+- 1 knowledge document
+- 1 team member
 
-Best for growing businesses:
+### Starter Plan
 
-- Up to 5 AI agents
-- 10,000 credits/month
-- 1,000,000 character knowledge base
+Perfect for small teams and startups:
+
+- **1,500 credits** per month
+- 1 chatbot
+- 3 knowledge documents
+- 1 team member
+
+### Pro Plan
+
+For growing businesses with advanced needs:
+
+- **6,000 credits** per month
+- 3 chatbots
+- 10 knowledge documents
+- 4 team members
 - All integrations (Web, Facebook, Instagram)
-- Priority email support
-- Team collaboration (5 members)
 
-## Business Plan
+### Enterprise Plan
 
-Best for enterprises:
+Custom solutions for large organizations:
 
-- Unlimited AI agents
-- Custom credit volume
-- Custom knowledge limits
-- All integrations with priority access
-- Dedicated support
-- Unlimited team members
-- Custom features available
+- Everything in Pro
+- Custom integrations
+- Dedicated account manager
+- Priority support
+- SLA guarantee
+- Custom analytics
 
 ## Changing Plans
 
 ### Upgrading
 
-1. Go to **Settings** > **Billing**
-2. Click **Upgrade**
-3. Select new plan
+1. Go to **Subscription** page
+2. Select the plan you want to upgrade to
+3. Click **Upgrade**
 4. Complete payment
 
-Upgrades take effect immediately. You'll be charged the prorated difference.
+Upgrades take effect immediately.
 
 ### Downgrading
 
-1. Go to **Settings** > **Billing**
-2. Click **Change Plan**
-3. Select new plan
-4. Confirm change
+1. Go to **Subscription** page
+2. Select a lower tier plan
+3. Confirm the downgrade
 
-Downgrades take effect at the next billing cycle.
+Downgrades are scheduled and take effect at the next billing cycle.
 
 <Warning>
 Downgrading may reduce your limits. Ensure your usage fits the new plan.
@@ -99,29 +105,23 @@ Accepted payment methods:
 
 - Credit cards (Visa, Mastercard, American Express)
 - Debit cards
-- PayPal (where available)
-
-## Invoices
-
-Access your invoices:
-
-1. Go to **Settings** > **Billing**
-2. Click **Billing History**
-3. Download invoices as PDF
 
 ## FAQ
 
 <AccordionGroup>
   <Accordion title="Can I try before subscribing?">
-    New accounts include a free trial with limited credits. No credit card required to start.
+    New accounts start with a free plan with limited credits. No credit card required to start.
   </Accordion>
   <Accordion title="What happens when I run out of credits?">
-    You can purchase additional credits or wait for your monthly refresh. Your agent will pause responding when credits are depleted.
+    Your agent will pause responding when credits are depleted. Contact sales for additional credits or wait for your monthly refresh.
   </Accordion>
   <Accordion title="Do you offer annual billing?">
-    Contact sales for annual billing options with discounted rates.
+    Contact sales for annual billing options.
   </Accordion>
   <Accordion title="Can I cancel anytime?">
-    Yes, cancel anytime. Your access continues until the end of the current billing period.
+    Yes, cancel anytime from the Subscription page. Your access continues until the end of the current billing period.
+  </Accordion>
+  <Accordion title="How do I get more credits?">
+    Contact sales to discuss additional credit packages or upgrading to a higher tier plan.
   </Accordion>
 </AccordionGroup>
